--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '34 10 * * *'
+    - cron: '34 10 * * 0'
   push:
     branches: [ main ]
     # Publish semver tags as releases.
